Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-5649

latest 2.0 build fails during make-install-memcached

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.0-beta
    • None
    • build
    • Security Level: Public
    • None

    Description

      cc1: warnings being treated as errors
      extensions/loggers/file_logger.c: In function 'open_logfile':
      extensions/loggers/file_logger.c:168: error: implicit declaration of function 'gzbuffer'
      make[3]: Leaving directory `/home/buildbot/centos-x64-20-builder/build/build/memcached'
      make[3]: *** [file_logger_la-file_logger.lo] Error 1
      make[2]: *** [install] Error 2
      make[2]: Leaving directory `/home/buildbot/centos-x64-20-builder/build/build/memcached'
      make[1]: *** [make-install-memcached] Error 2
      make[1]: Leaving directory `/home/buildbot/centos-x64-20-builder/build/build'
      make: *** [build] Error 2
      program finished with exit code 2
      elapsedTime=1346.046688

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            farshid Farshid Ghods (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty