MB-5649 don't use gzbuffer

Change-Id: Iae5874ebf474afe7293a8964a8239deddcaf1228
Reviewed-on: http://review.couchbase.org/17542
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: Trond Norbye <trond.norbye@gmail.com>